<resources>
    <string name="app_name">Besednik</string>

    <!-- Keyboard Keys -->
    <string name="key_q">Q</string>
    <string name="key_w">W</string>
    <string name="key_e">E</string>
    <string name="key_r">R</string>
    <string name="key_t">T</string>
    <string name="key_z">Z</string>
    <string name="key_u">U</string>
    <string name="key_i">I</string>
    <string name="key_o">O</string>
    <string name="key_p">P</string>
    <string name="key_š">Š</string>

    <string name="key_a">A</string>
    <string name="key_s">S</string>
    <string name="key_d">D</string>
    <string name="key_f">F</string>
    <string name="key_g">G</string>
    <string name="key_h">H</string>
    <string name="key_j">J</string>
    <string name="key_k">K</string>
    <string name="key_l">L</string>
    <string name="key_č">Č</string>
    <string name="key_ž">Ž</string>

    <string name="key_y">Y</string>
    <string name="key_x">X</string>
    <string name="key_c">C</string>
    <string name="key_v">V</string>
    <string name="key_b">B</string>
    <string name="key_n">N</string>
    <string name="key_m">M</string>

    <string name="key_enter">POTRDI</string>
    <string name="key_del">BRIŠI</string>

    <!-- Game Messages -->
    <string name="not_enough_letters">Premalo črk</string>
    <string name="win_title">Odlično!</string>
    <string name="loss_title">Konec igre</string>
    <string name="win_message">Uganili ste besedo: %1$s</string>
    <string name="loss_message">Beseda je bila: %1$s</string>
    <string name="play_again">Igraj ponovno</string>
    <string name="exit">Izhod</string>
    <string name="dialog_message_format">%1$s\n\nŽelite igrati ponovno?</string>
</resources>