<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/grid_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/keyboard_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <!-- Rows will be added programmatically or defined here.
             Defining here for clarity and ease of access. -->
        <include
            android:id="@+id/row_0"
            layout="@layout/grid_row" />

        <include
            android:id="@+id/row_1"
            layout="@layout/grid_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

        <include
            android:id="@+id/row_2"
            layout="@layout/grid_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

        <include
            android:id="@+id/row_3"
            layout="@layout/grid_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

        <include
            android:id="@+id/row_4"
            layout="@layout/grid_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

        <include
            android:id="@+id/row_5"
            layout="@layout/grid_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/keyboard_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button style="@style/KeyboardButton" android:text="@string/key_q" android:id="@+id/key_q"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_w" android:id="@+id/key_w"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_e" android:id="@+id/key_e"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_r" android:id="@+id/key_r"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_t" android:id="@+id/key_t"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_y" android:id="@+id/key_y"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_u" android:id="@+id/key_u"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_i" android:id="@+id/key_i"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_o" android:id="@+id/key_o"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_p" android:id="@+id/key_p"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">
            <Button style="@style/KeyboardButton" android:text="@string/key_a" android:id="@+id/key_a"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_s" android:id="@+id/key_s"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_d" android:id="@+id/key_d"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_f" android:id="@+id/key_f"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_g" android:id="@+id/key_g"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_h" android:id="@+id/key_h"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_j" android:id="@+id/key_j"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_k" android:id="@+id/key_k"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_l" android:id="@+id/key_l"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">
            <Button style="@style/KeyboardButton" android:layout_width="0dp" android:layout_weight="1.5" android:text="ENTER" android:id="@+id/key_enter"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_z" android:id="@+id/key_z"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_x" android:id="@+id/key_x"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_c" android:id="@+id/key_c"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_v" android:id="@+id/key_v"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_b" android:id="@+id/key_b"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_n" android:id="@+id/key_n"/>
            <Button style="@style/KeyboardButton" android:text="@string/key_m" android:id="@+id/key_m"/>
            <Button style="@style/KeyboardButton" android:layout_width="0dp" android:layout_weight="1.5" android:text="DEL" android:id="@+id/key_del"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>